create view form.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
     "**/bower_components": true,
     "**/.sfdx": true
   },
-  "eslint.nodePath": "c:\\Users\\Ben Barela\\.vscode\\extensions\\salesforce.salesforcedx-vscode-lwc-46.16.0\\node_modules"
+  "eslint.nodePath": "c:\\Users\\benito.barela\\.vscode\\extensions\\salesforce.salesforcedx-vscode-lwc-46.16.0\\node_modules"
 }
