--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -5,6 +5,9 @@
         "paths": {
             "c/demo": [
                 "demo/demo.js"
+            ],
+            "c/recordViewForm": [
+                "recordViewForm/recordViewForm.js"
             ]
         }
     },
